--- a/src/components/Layout/componets/Header/Header.module.scss
+++ b/src/components/Layout/componets/Header/Header.module.scss
@@ -19,8 +19,12 @@
     justify-content: space-between;
 }
 
-.search {
+.search,
+.search-result {
     width: 361px;
+}
+
+.search {
     height: var(--search-height);
     display: flex;
     position: relative;
@@ -57,6 +61,13 @@
     &:focus-within {
         border-color: rgba(22, 24, 35, 0.2);
     }
+}
+
+.search-title {
+    padding: 5px 12px;
+    font-size: 1.4rem;
+    color: rgba(22, 24, 35, 0.5);
+    font-weight: 600;
 }
 
 .clear,
