--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,7 +5,7 @@
     --primary: #fe2c55;
     --black: #000;
     --text-color: #333;
-
+    --white: #fff;
     //Default Layout
     --default-layout-header-hight: 60px;
     --default-layout-width: 1150px;
